- Simplify code - Remove all gtm

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 
 <body>
-  <script async="" src="./Wordle - A daily word game_files/js"></script>
+  <!-- <script async="" src="./Wordle - A daily word game_files/js"></script> -->
   <script>
     (function () {
       // Defining the hash before the main bundle allows the bundle access window.hash
@@ -128,7 +128,7 @@
       window.wordle.hash = 'e65ce0a5';
     })();
   </script>
-  <script src="./Wordle - A daily word game_files/main.e65ce0a5.js.download"></script>
+  <script src="./scripts/main.e65ce0a5.js"></script>
   <game-app></game-app>
 
 
